# ADAPT-RCA

./: .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW.md  CONFIG_SUPPORT_SUMMARY.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  ROADMAP_PROGRESS.md  adapt-rca.toml.example  adapt-rca.yaml.example  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  dependency-update.yml  release.yml
docs/: TROUBLESHOOTING.md  V2_FEATURES.md  V3_FEATURES.md  configuration.md
examples/: README.md  config_demo.py
examples/data/: sample_csv.csv  sample_multi_service.jsonl
examples/scripts/: analyze_csv.py  analyze_with_llm.py  visualize_graph.py
examples/v3_integrations/: README.md  aws_cloudwatch_example.py  multi_cloud_example.py  opentelemetry_example.py  webhook_example.py
src/adapt_rca/: __init__.py  circuit_breaker.py  cli.py  cli_old.py  config.py  config_loader.py  constants.py  exceptions.py  logging_config.py  logging_context.py  metrics.py  models.py  retry.py  utils.py  version.py
src/adapt_rca/alerting/: __init__.py  alert_manager.py  correlation.py  notifiers.py
src/adapt_rca/analytics/: __init__.py  anomaly_detector.py  metrics_tracker.py
src/adapt_rca/api/: __init__.py  health.py  openapi_schema.py  rca.py
src/adapt_rca/audit/: __init__.py  audit_system.py
src/adapt_rca/graph/: causal_graph.py
src/adapt_rca/ingestion/: __init__.py  csv_loader.py  file_loader.py  loader_factory.py  text_loader.py
src/adapt_rca/integrations/: __init__.py  cloud_providers.py  opentelemetry_support.py  webhook_receiver.py
src/adapt_rca/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/adapt_rca/middleware/: __init__.py  rate_limiter.py
src/adapt_rca/ml/: __init__.py  isolation_forest.py  lstm_detector.py  model_manager.py
src/adapt_rca/parsing/: __init__.py  log_parser.py
src/adapt_rca/reasoning/: __init__.py  agent.py  heuristics.py  llm_agent.py
src/adapt_rca/remediation/: __init__.py  actions.py  engine.py  runbook.py
src/adapt_rca/reporting/: __init__.py  exporters.py  formatter.py
src/adapt_rca/security/: __init__.py  auth.py  sanitization.py
src/adapt_rca/storage/: __init__.py  incident_store.py
src/adapt_rca/web/: __init__.py  app.py
tests/: test_audit.py  test_causal_graph.py  test_circuit_breaker.py  test_config.py  test_config_loader.py  test_enhanced_agent.py  test_exceptions.py  test_file_loader.py  test_loader_factory.py  test_models.py  test_parsing.py  test_reasoning.py  test_retry.py  test_utils.py
tests/test_api/: test_health.py  test_openapi_schema.py  test_rca.py
tests/test_middleware/: __init__.py  test_rate_limiter.py
